# autotune-real-time-audio-tuner

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  ML_INTEGRATION_GUIDE.md  ML_INTEGRATION_STATUS.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  README.md  TEST_RESULTS.md  build.bat  build.sh  quick_test.py  run_all_tests.py  test_comprehensive.py  test_logic.py  test_report.json  validate_project.py
.github/: copilot-instructions.md
examples/: main.cpp
include/: audio_buffer.h  audio_types.h  autotune_engine.h  ml_model_loader.h  pitch_corrector.h  pitch_detector.h  quantizer.h
models/: README.md  pitch_corrector.onnx  pitch_corrector_config.json
python/: bindings.cpp
src/: audio_buffer.cpp  autotune_engine.cpp  ml_model_loader.cpp  pitch_corrector.cpp  pitch_detector.cpp  python_bindings.cpp  quantizer.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp  test_main.cpp  test_pitch_detector.cpp  test_quantizer.cpp
